@@ -1,4 +1,5 @@
 0.27:
+ * Display time stops on the time of the last commit.
  * Automatic camera rotation for better use of screen space.
  * Support international keyboards (Peter Kjellerstedt).
  * Added take screenshot button (F12). Screenshots respect the alpha channel.
